# llvm-wgsl-backend

./: .clang-format  .gitignore  .ignore  CMakeLists.txt  Makefile  README.md  test.sh
src/: globals.cpp  globals.hpp  main.cpp  translator.cpp  translator.hpp  util.hpp  wgsl_backend.cpp  wgsl_backend.hpp
tests/axpy/: axpy.cu  axpy.html  axpy.js  axpy.wgsl  axpy_device.ll  axpy_device.ll_bak  axpy_output.wgsl  cu  main.cu
